tests/ui/closures/closure-move-sync.stderr
error[E0277]: `std::sync::mpsc::Receiver<()>` cannot be shared between threads safely
  --> $DIR/closure-move-sync.rs:6:27
   |
LL |       let t = thread::spawn(|| {
   |  _____________-------------_^
   | |             |
   | |             required by a bound introduced by this call
LL | |         recv.recv().unwrap();
LL | |
LL | |     });
   | |_____^ `std::sync::mpsc::Receiver<()>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `std::sync::mpsc::Receiver<()>`
   = note: required for `&std::sync::mpsc::Receiver<()>` to implement `Send`
note: required because it's used within this closure
  --> $DIR/closure-move-sync.rs:6:27
   |
LL |     let t = thread::spawn(|| {
   |                           ^^
note: required by a bound in `spawn`
  --> $SRC_DIR/std/src/thread/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
